--- a/update-checker/pom.xml
+++ b/update-checker/pom.xml
@@ -29,12 +29,87 @@
                 <artifactId>versions-maven-plugin</artifactId>
                 <version>${versions.plugin.version}</version>
                 <configuration>
-                    <!-- note that http://www.mojohaus.org/versions-maven-plugin/version-rules.html says -->
-                    <!-- that rules.xml is (or might be) deprecated (but without a replacement solution yet), -->
-                    <!-- so maybe this must be changed once the 3.0.0 version of the versions plugin is out... -->
-
-                    <!-- see https://stackoverflow.com/a/33727833 for specifying rulesUri -->
-                    <rulesUri>file:///${session.executionRootDirectory}/rules.xml</rulesUri>
+                    <includeParent>true</includeParent>
+                    <ruleSet>
+                        <!-- see https://www.mojohaus.org/versions/versions-maven-plugin/version-rules.html -->
+                        <ignoreVersions>
+                            <ignoreVersion>
+                                <!-- ignore all versions with a build number or qualifier -->
+                                <type>regex</type>
+                                <version>\d+\.\d+(\.\d+)?-.*</version>
+                            </ignoreVersion>
+                            <ignoreVersion>
+                                <!-- ignore versions like 4.12.0.redhat-003 or 1.4.2.jenkins-1 -->
+                                <type>regex</type>
+                                <version>\d+\.\d+\.\d+\.[a-z].*</version>
+                            </ignoreVersion>
+                            <ignoreVersion>
+                                <!-- ignore versions like 4.0.0.Alpha1, 2.1.0.Beta1 and 1.4.0.CR1 (but still allow 2.0.2.Final) -->
+                                <type>regex</type>
+                                <version>\d+\.\d+\.\d+\.[ABC].*</version>
+                            </ignoreVersion>
+                        </ignoreVersions>
+                        <rules>
+                            <rule>
+                                <groupId>javax.jws</groupId>
+                                <artifactId>jsr181-api</artifactId>
+                                <comparisonMethod>maven</comparisonMethod>
+                                <ignoreVersions>
+                                    <!-- ignore versions like 1.0.0.MR1-redhat-8 -->
+                                    <ignoreVersion>
+                                        <type>regex</type>
+                                        <version>.*-redhat.*</version>
+                                    </ignoreVersion>
+                                </ignoreVersions>
+                            </rule>
+                            <rule>
+                                <groupId>com.sun.activation</groupId>
+                                <artifactId>jakarta.activation</artifactId>
+                                <comparisonMethod>maven</comparisonMethod>
+                                <ignoreVersions>
+                                    <!-- ignore Jakarta EE 9 artifacts (2.x) for now -->
+                                    <ignoreVersion>
+                                        <type>regex</type>
+                                        <version>2\..*</version>
+                                    </ignoreVersion>
+                                </ignoreVersions>
+                            </rule>
+                            <rule>
+                                <groupId>org.glassfish</groupId>
+                                <artifactId>jakarta.el</artifactId>
+                                <comparisonMethod>maven</comparisonMethod>
+                                <ignoreVersions>
+                                    <!-- ignore Jakarta EE 9 artifacts (4.x) for now -->
+                                    <ignoreVersion>
+                                        <type>regex</type>
+                                        <version>4\..*</version>
+                                    </ignoreVersion>
+                                </ignoreVersions>
+                            </rule>
+                            <rule>
+                                <groupId>org.slf4j</groupId>
+                                <comparisonMethod>maven</comparisonMethod>
+                                <ignoreVersions>
+                                    <!-- we're not sure that slf4j already works with wildfly/quarkus -->
+                                    <ignoreVersion>
+                                        <type>regex</type>
+                                        <version>2\..*</version>
+                                    </ignoreVersion>
+                                </ignoreVersions>
+                            </rule>
+                            <rule>
+                                <groupId>ch.qos.logback</groupId>
+                                <comparisonMethod>maven</comparisonMethod>
+                                <ignoreVersions>
+                                    <!-- logback 1.3.x needs slf4j 2.x, see above -->
+                                    <ignoreVersion>
+                                        <type>regex</type>
+                                        <version>1\.[34]\..*</version>
+                                    </ignoreVersion>
+                                </ignoreVersions>
+                            </rule>
+                        </rules>
+                    </ruleSet>
                 </configuration>
             </plugin>
 
