--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>quarkus-2.13</module> <!-- 2.13 latest Quarkus Red Hat build: https://access.redhat.com/articles/4966181 -->
         <module>quarkus-2.14</module>
+        <module>quarkus-2.15</module>
         <module>wildfly-25</module>
         <module>wildfly-26</module>
         <module>wildfly-26.1</module>
@@ -30,10 +31,7 @@
         <!--   supported in the compiler plugin as `<release>` for JDK 9 and later -->
         <!-- - the official Java version number, e.g. 1.8 for Java 1.8, and 9 for Java 9 -->
         <!--   (this is used for 'legacy' interfaces, e.g. the -source/-target switches of javac) -->
-        <java.release>8</java.release>
-
-        <!-- Used only with JDK 1.8 -->
-        <java.version>1.8</java.version>
+        <java.release>11</java.release>
 
         <!-- Java/Jakarta EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
@@ -76,11 +74,11 @@
         <!-- non-apache maven plugin versions -->
         <asciidoctor.plugin.version>2.2.2</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.3.0</build-helper.plugin.version>
-        <docker.plugin.version>0.40.2</docker.plugin.version>
+        <docker.plugin.version>0.40.3</docker.plugin.version>
         <jacoco.plugin.version>0.8.8</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
         <openapi-generator.plugin.version>6.2.1</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.36</swagger-codegen.plugin.version>
+        <swagger-codegen.plugin.version>3.0.39</swagger-codegen.plugin.version>
         <versions.plugin.version>2.14.0</versions.plugin.version>
         <wildfly.plugin.version>4.0.0.Final</wildfly.plugin.version>
 
@@ -136,14 +134,14 @@
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
         <asm.version>9.4</asm.version>
-        <byte-buddy.version>1.12.20</byte-buddy.version>
+        <byte-buddy.version>1.12.22</byte-buddy.version>
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.2.0</opentest4j.version>
-        <junit.platform.version>1.9.1</junit.platform.version>
-        <junit.jupiter.version>5.9.1</junit.jupiter.version>
+        <junit.platform.version>1.9.2</junit.platform.version>
+        <junit.jupiter.version>5.9.2</junit.jupiter.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <mockito.version>4.10.0</mockito.version>
+        <mockito.version>5.0.0</mockito.version>
         <equalsverifier.version>3.12.3</equalsverifier.version>
         <json.unit.version>2.36.0</json.unit.version>
         <jsonassert.version>1.5.1</jsonassert.version>
@@ -679,26 +677,6 @@
                             <!-- you get an AssertionError in JavaCompiler.readSourceFile instead of a proper error message -->
                             <!-- see https://issues.apache.org/jira/browse/MCOMPILER-346 -->
                             <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java8</id>
-            <activation>
-                <jdk>1.8</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>${maven.compiler.plugin.version}</version>
-                        <configuration>
-                            <!-- Java 8 is the last version where `javac` should be called with -source N -target N -->
-                            <source>${java.version}</source>
-                            <target>${java.version}</target>
                         </configuration>
                     </plugin>
                 </plugins>
