--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>quarkus-2.13</module> <!-- 2.13 latest Quarkus Red Hat build: https://access.redhat.com/articles/4966181 -->
         <module>quarkus-2.14</module>
         <module>quarkus-2.15</module>
+        <module>quarkus-2.16</module>
         <module>wildfly-25</module>
         <module>wildfly-26</module>
         <module>wildfly-26.1</module>
@@ -75,6 +76,7 @@
         <asciidoctor.plugin.version>2.2.2</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.3.0</build-helper.plugin.version>
         <docker.plugin.version>0.40.3</docker.plugin.version>
+        <extra-enforcer-rules.plugin.version>1.6.1</extra-enforcer-rules.plugin.version>
         <jacoco.plugin.version>0.8.8</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
         <openapi-generator.plugin.version>6.2.1</openapi-generator.plugin.version>
@@ -108,8 +110,8 @@
         <!-- artifact versions -->
         <apache.commons.lang3.version>3.12.0</apache.commons.lang3.version>
         <!-- use a logback version compatible with slf4j, see below -->
-        <logback.version>1.2.11</logback.version>
-        <lombok.version>1.18.24</lombok.version>
+        <logback.version>1.2.12</logback.version>
+        <lombok.version>1.18.26</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <!-- there's 2.0.6 now, but we want to do some tests first before using it -->
@@ -117,8 +119,8 @@
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.14.1</jackson-2-version>
-        <jackson-bom.version>2.14.1</jackson-bom.version>
+        <jackson-2-version>2.14.2</jackson-2-version>
+        <jackson-bom.version>2.14.2</jackson-bom.version>
 
         <!-- latest version for projects independent of an application server (AS) -->
         <!-- with an AS it is redefined to be the version used by the AS's resteasy artifact -->
@@ -133,17 +135,17 @@
         <!-- byte code manipulation tools, mostly used for tests, but not exclusively -->
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
-        <asm.version>9.4</asm.version>
-        <byte-buddy.version>1.12.22</byte-buddy.version>
+        <asm.version>9.5</asm.version>
+        <byte-buddy.version>1.14.3</byte-buddy.version>
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.2.0</opentest4j.version>
         <junit.platform.version>1.9.2</junit.platform.version>
         <junit.jupiter.version>5.9.2</junit.jupiter.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <mockito.version>5.0.0</mockito.version>
-        <equalsverifier.version>3.12.3</equalsverifier.version>
-        <json.unit.version>2.36.0</json.unit.version>
+        <mockito.version>5.2.0</mockito.version>
+        <equalsverifier.version>3.14.1</equalsverifier.version>
+        <json.unit.version>2.37.0</json.unit.version>
         <jsonassert.version>1.5.1</jsonassert.version>
         <restassured.version>5.3.0</restassured.version>
         <wiremock.version>2.27.2</wiremock.version>
@@ -608,6 +610,11 @@
                     <groupId>io.fabric8</groupId>
                     <artifactId>docker-maven-plugin</artifactId>
                     <version>${docker.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>extra-enforcer-rules</artifactId>
+                    <version>${extra-enforcer-rules.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
