--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>wildfly-26</module>
         <module>wildfly-26.1</module>
         <module>wildfly-27</module>
+        <module>wildfly-28</module>
         <module>update-checker</module>
     </modules>
 
@@ -73,34 +74,34 @@
         <!-- for plugins see also the section in README.md -->
 
         <!-- non-apache maven plugin versions -->
-        <asciidoctor.plugin.version>2.2.2</asciidoctor.plugin.version>
+        <asciidoctor.plugin.version>2.2.3</asciidoctor.plugin.version>
         <build-helper.plugin.version>3.3.0</build-helper.plugin.version>
-        <docker.plugin.version>0.40.3</docker.plugin.version>
+        <docker.plugin.version>0.42.1</docker.plugin.version>
         <extra-enforcer-rules.plugin.version>1.6.1</extra-enforcer-rules.plugin.version>
-        <jacoco.plugin.version>0.8.8</jacoco.plugin.version>
-        <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>6.2.1</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.39</swagger-codegen.plugin.version>
+        <jacoco.plugin.version>0.8.9</jacoco.plugin.version>
+        <nexus-staging.plugin.version>1.6.13</nexus-staging.plugin.version>
+        <openapi-generator.plugin.version>6.5.0</openapi-generator.plugin.version>
+        <swagger-codegen.plugin.version>3.0.42</swagger-codegen.plugin.version>
         <versions.plugin.version>2.14.0</versions.plugin.version>
         <wildfly.plugin.version>4.0.0.Final</wildfly.plugin.version>
 
         <!-- apache maven plugin versions (in alphabetical order) -->
-        <maven.assembly.plugin.version>3.4.2</maven.assembly.plugin.version>
+        <maven.assembly.plugin.version>3.5.0</maven.assembly.plugin.version>
         <maven.clean.plugin.version>3.2.0</maven.clean.plugin.version>
-        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
-        <maven.dependency.plugin.version>3.2.0</maven.dependency.plugin.version>
-        <maven.deploy.plugin.version>3.0.0</maven.deploy.plugin.version>
+        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
+        <maven.dependency.plugin.version>3.5.0</maven.dependency.plugin.version>
+        <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
         <maven.ear.plugin.version>3.3.0</maven.ear.plugin.version>
         <maven.ejb.plugin.version>3.2.1</maven.ejb.plugin.version>
-        <maven.enforcer.plugin.version>3.1.0</maven.enforcer.plugin.version>
-        <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
-        <maven.install.plugin.version>3.1.0</maven.install.plugin.version>
+        <maven.enforcer.plugin.version>3.3.0</maven.enforcer.plugin.version>
+        <maven.failsafe.plugin.version>3.0.0</maven.failsafe.plugin.version>
+        <maven.install.plugin.version>3.1.1</maven.install.plugin.version>
         <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
-        <maven.javadoc.plugin.version>3.4.1</maven.javadoc.plugin.version>
+        <maven.javadoc.plugin.version>3.5.0</maven.javadoc.plugin.version>
         <maven.rar.plugin.version>3.0.0</maven.rar.plugin.version>
-        <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
-        <maven.resources.plugin.version>3.3.0</maven.resources.plugin.version>
-        <maven.scm.plugin.version>1.13.0</maven.scm.plugin.version>
+        <maven.release.plugin.version>3.0.0</maven.release.plugin.version>
+        <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
+        <maven.scm.plugin.version>2.0.0</maven.scm.plugin.version>
         <maven.shade.plugin.version>3.4.1</maven.shade.plugin.version>
         <maven.site.plugin.version>3.12.1</maven.site.plugin.version>
         <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
@@ -136,7 +137,7 @@
         <!-- note that byte-buddy pulls in asm, so asm.version should be the one used by the given byte-buddy -->
         <!-- (check `version.asm` in maven3_repo\net\bytebuddy\byte-buddy-parent\x.y.z\byte-buddy-parent-x.y.z.pom) -->
         <asm.version>9.5</asm.version>
-        <byte-buddy.version>1.14.3</byte-buddy.version>
+        <byte-buddy.version>1.14.4</byte-buddy.version>
 
         <!-- testing and static analysis -->
         <opentest4j.version>1.2.0</opentest4j.version>
