--- a/quarkus-2.14/pom.xml
+++ b/quarkus-2.14/pom.xml
@@ -100,6 +100,10 @@
         <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 2.0) -->
         <jakarta.inject.version>1.0</jakarta.inject.version>
 
+        <!-- Logging API supported by Quarkus (logback for testing must be compatible with slf4j) -->
+        <slf4j.version>1.7.36</slf4j.version>
+        <logback.version>1.2.12</logback.version>
+
         <asm.version>9.4</asm.version>
         <byte-buddy.version>1.12.18</byte-buddy.version>
 
