--- a/quarkus-2.16/pom.xml
+++ b/quarkus-2.16/pom.xml
@@ -17,7 +17,7 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>2.16.5.Final</quarkus.version>
+        <quarkus.version>2.16.6.Final</quarkus.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
@@ -53,7 +53,7 @@
         <smallrye.config.version>2.13.3</smallrye.config.version>
         <smallrye.context-propagation.version>1.2.2</smallrye.context-propagation.version>
         <smallrye.fault-tolerance.version>5.6.0</smallrye.fault-tolerance.version>
-        <smallrye.graphql.version>1.9.4</smallrye.graphql.version>
+        <smallrye.graphql.version>1.9.5</smallrye.graphql.version>
         <smallrye.health.version>3.3.1</smallrye.health.version>
         <smallrye.jwt.version>3.6.0</smallrye.jwt.version>
         <smallrye.metrics.version>3.0.5</smallrye.metrics.version>
@@ -99,6 +99,10 @@
 
         <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 2.0) -->
         <jakarta.inject.version>1.0</jakarta.inject.version>
+
+        <!-- Logging API supported by Quarkus (logback for testing must be compatible with slf4j) -->
+        <slf4j.version>1.7.36</slf4j.version>
+        <logback.version>1.2.12</logback.version>
 
         <asm.version>9.4</asm.version>
         <byte-buddy.version>1.12.18</byte-buddy.version>
