--- a/wildfly-26.1/pom.xml
+++ b/wildfly-26.1/pom.xml
@@ -110,6 +110,10 @@
         <!-- TODO use org.jboss.weld:weld-core-bom -->
         <weld.version>3.1.9.Final</weld.version>
 
+        <!-- Logging API supported by Quarkus (logback for testing must be compatible with slf4j) -->
+        <slf4j.version>1.7.36</slf4j.version>
+        <logback.version>1.2.12</logback.version>
+
         <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
     </properties>
