--- a/wildfly-27/pom.xml
+++ b/wildfly-27/pom.xml
@@ -95,8 +95,9 @@
         <!-- TODO use org.jboss.weld:weld-core-bom -->
         <weld.version>5.1.0.Final</weld.version>
 
-        <!-- Logging API supported by Wildfly -->
+        <!-- Logging API supported by Wildfly (logback for testing must be compatible with slf4j) -->
         <slf4j.version>1.7.36</slf4j.version>
+        <logback.version>1.2.12</logback.version>
 
         <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
