--- a/wildfly-28/pom.xml
+++ b/wildfly-28/pom.xml
@@ -18,7 +18,7 @@
 
         <!-- latest Wildfly 28 dependencies -->
         <!-- see https://github.com/wildfly/boms/releases -->
-        <wildfly.bom.version>28.0.0.Beta1</wildfly.bom.version>
+        <wildfly.bom.version>28.0.0.Final</wildfly.bom.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <jakarta.activation.version>2.1.1.jbossorg-1</jakarta.activation.version>
@@ -39,11 +39,8 @@
         <mp.config.version>3.0.2</mp.config.version>
         <mp.fault-tolerance.version>4.0.2</mp.fault-tolerance.version>
         <mp.health.version>4.0</mp.health.version>
-        <mp.jwt.version>2.0</mp.jwt.version>
+        <mp.jwt.version>2.1</mp.jwt.version>
         <mp.lra.version>2.0</mp.lra.version>
-        <!-- mp.metrics classes included in smallrye.metrics, no dependency on upstream API -->
-        <!-- but it is defined anyway in the wildfly-microprofile BOM -->
-        <mp.metrics.version>4.0</mp.metrics.version>
         <mp.openapi.version>3.1</mp.openapi.version>
         <!-- mp.reactive-messaging classes included in smallrye.reactive-messaging, no dependency on upstream API -->
         <!-- but it is defined anyway in the wildfly-microprofile BOM -->
@@ -55,7 +52,6 @@
         <smallrye.fault-tolerance.version>6.2.1</smallrye.fault-tolerance.version>
         <smallrye.health.version>4.0.0</smallrye.health.version>
         <smallrye.jwt.version>4.2.0</smallrye.jwt.version>
-        <smallrye.metrics.version>4.0.0</smallrye.metrics.version>
         <smallrye.openapi.version>3.2.0</smallrye.openapi.version>
         <smallrye.opentelemetry.version>2.3.0</smallrye.opentelemetry.version>
         <smallrye.reactive-converter-api.version>2.6.0</smallrye.reactive-converter-api.version>
@@ -82,8 +78,8 @@
         <jackson-bom.version>2.14.2</jackson-bom.version>
 
         <!-- note that infinispan-directory-provider uses an older version -->
-        <infinispan.version>14.0.7.Final</infinispan.version>
-        <hibernate.version>6.2.0.CR4</hibernate.version>
+        <infinispan.version>14.0.8.Final</infinispan.version>
+        <hibernate.version>6.2.1.Final</hibernate.version>
 
         <!-- Wildfly 28.x.x.Final uses Hibernate Validator 8.0.xx.Final -->
         <jakarta.validation.version>3.0.2</jakarta.validation.version>
@@ -95,7 +91,7 @@
         <weld.version>5.1.0.Final</weld.version>
 
         <!-- Logging API supported by Wildfly -->
-        <slf4j.version>2.0.6</slf4j.version>
+        <slf4j.version>2.0.7</slf4j.version>
 
         <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
@@ -184,11 +180,6 @@
                     <version>${mp.lra.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>org.eclipse.microprofile.metrics</groupId>
-                    <artifactId>microprofile-metrics-api</artifactId>
-                    <version>${mp.metrics.version}</version>
-                </dependency>
-                <dependency>
                     <groupId>org.eclipse.microprofile.openapi</groupId>
                     <artifactId>microprofile-openapi-api</artifactId>
                     <version>${mp.openapi.version}</version>
@@ -197,6 +188,14 @@
                     <groupId>io.smallrye.reactive</groupId>
                     <artifactId>smallrye-reactive-messaging-kafka-api</artifactId>
                     <version>${smallrye.reactive-messaging.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (smallrye-reactive-messaging -->
+                            <!-- has already opentelemetry-api:1.22.0, wildfly only 1.20.0) -->
+                            <groupId>io.opentelemetry</groupId>
+                            <artifactId>opentelemetry-api</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.eclipse.microprofile.reactive.messaging</groupId>
@@ -245,11 +244,6 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-jwt</artifactId>
                     <version>${smallrye.jwt.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>io.smallrye</groupId>
-                    <artifactId>smallrye-metrics</artifactId>
-                    <version>${smallrye.metrics.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
