--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>quarkus-2.14</module>
         <module>quarkus-2.15</module>
         <module>quarkus-2.16</module>
+        <module>quarkus-3.0</module>
         <module>wildfly-26.1</module>
         <module>wildfly-27</module>
         <module>wildfly-28</module>
