--- a/quarkus-3.0/pom.xml
+++ b/quarkus-3.0/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>quarkus-2.16</artifactId>
+    <artifactId>quarkus-3.0</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -17,95 +17,86 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>2.16.6.Final</quarkus.version>
+        <quarkus.version>3.0.0.Final</quarkus.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
-        <jakarta.activation.version>1.2.1</jakarta.activation.version>
-        <javax.xml.bind.groupId>org.jboss.spec.javax.xml.bind</javax.xml.bind.groupId>
-        <javax.xml.bind.artifactId>jboss-jaxb-api_2.3_spec</javax.xml.bind.artifactId>
-        <!--jboss-jaxb-api_2.3_spec.version-->
-        <javax.xml.bind.version>2.0.0.Final</javax.xml.bind.version>
-        <javax.annotation.groupId>jakarta.annotation</javax.annotation.groupId>
-        <javax.annotation.artifactId>jakarta.annotation-api</javax.annotation.artifactId>
-        <!--jakarta.annotation-api.version-->
-        <javax.annotation.version>1.3.5</javax.annotation.version>
-        <javax.transaction.groupId>jakarta.transaction</javax.transaction.groupId>
-        <javax.transaction.artifactId>jakarta.transaction-api</javax.transaction.artifactId>
-        <!--jakarta.transaction-api.version-->
-        <javax.transaction.version>1.3.3</javax.transaction.version>
+        <jakarta.activation.version>2.1.1</jakarta.activation.version>
+        <jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
+        <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
+        <jakarta.transaction.version>2.0.1</jakarta.transaction.version>
+
+        <jakarta.el.version>5.0.1</jakarta.el.version>
 
         <!-- MicroProfile Standard Versions, from the quarkus-bom-x.x.x.Final.pom -->
         <!-- or as transitive dependency from the smallrye artifacts -->
-        <mp.config.version>2.0.1</mp.config.version>
-        <mp.context-propagation.version>1.2</mp.context-propagation.version>
-        <mp.fault-tolerance.version>3.0</mp.fault-tolerance.version> <!-- transitive from smallrye.fault-tolerance.version -->
-        <mp.graphql.version>1.1.0</mp.graphql.version> <!-- transitive from smallrye.graphql.version -->
-        <mp.health.version>3.1</mp.health.version> <!-- transitive from smallrye.health.version -->
-        <mp.jwt.version>1.2</mp.jwt.version>
-        <mp.lra.version>1.0</mp.lra.version>
-        <mp.metrics.version>3.0.1</mp.metrics.version>
-        <mp.openapi.version>2.0.1</mp.openapi.version>
-        <mp.opentracing.version>2.0</mp.opentracing.version>
+        <mp.config.version>3.0.2</mp.config.version>
+        <mp.context-propagation.version>1.3</mp.context-propagation.version>
+        <mp.fault-tolerance.version>4.0.2</mp.fault-tolerance.version>
+        <mp.graphql.version>1.1.0</mp.graphql.version> <!-- ??transitive from smallrye.graphql.version -->
+        <mp.health.version>4.0.1</mp.health.version>
+        <mp.jwt.version>2.1</mp.jwt.version>
+        <mp.lra.version>2.0</mp.lra.version>
+        <mp.metrics.version>4.0.1</mp.metrics.version>
+        <mp.openapi.version>3.1</mp.openapi.version>
+        <mp.opentracing.version>3.0</mp.opentracing.version>
         <!-- mp.reactive-messaging classes included in smallrye.reactive-messaging, no dependency on upstream API -->
-        <mp.reactive-streams-operators.version>1.0.1</mp.reactive-streams-operators.version>
-        <mp.rest-client.version>2.0</mp.rest-client.version>
-        <smallrye.common.version>1.13.2</smallrye.common.version>
-        <smallrye.config.version>2.13.3</smallrye.config.version>
-        <smallrye.context-propagation.version>1.2.2</smallrye.context-propagation.version>
-        <smallrye.fault-tolerance.version>5.6.0</smallrye.fault-tolerance.version>
-        <smallrye.graphql.version>1.9.5</smallrye.graphql.version>
-        <smallrye.health.version>3.3.1</smallrye.health.version>
-        <smallrye.jwt.version>3.6.0</smallrye.jwt.version>
-        <smallrye.metrics.version>3.0.5</smallrye.metrics.version>
-        <smallrye.openapi.version>3.1.1</smallrye.openapi.version>
-        <smallrye.opentracing.version>2.1.1</smallrye.opentracing.version>
+        <mp.reactive-streams-operators.version>3.0</mp.reactive-streams-operators.version>
+        <mp.rest-client.version>3.0.1</mp.rest-client.version>
+        <smallrye.common.version>2.1.0</smallrye.common.version>
+        <smallrye.config.version>3.2.1</smallrye.config.version>
+        <smallrye.context-propagation.version>2.1.0</smallrye.context-propagation.version>
+        <smallrye.fault-tolerance.version>6.2.2</smallrye.fault-tolerance.version>
+        <smallrye.graphql.version>2.1.3</smallrye.graphql.version>
+        <smallrye.health.version>4.0.1</smallrye.health.version>
+        <smallrye.jwt.version>4.2.1</smallrye.jwt.version>
+        <smallrye.metrics.version>4.0.0</smallrye.metrics.version>
+        <smallrye.openapi.version>3.3.2</smallrye.openapi.version>
+        <smallrye.opentracing.version>3.0.3</smallrye.opentracing.version>
         <smallrye.reactive-attribute-processor.version>3.21.0</smallrye.reactive-attribute-processor.version>
-        <smallrye.reactive-converter-api.version>2.7.0</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>3.22.1</smallrye.reactive-messaging.version>
+        <smallrye.reactive-converter-api.version>3.0.0</smallrye.reactive-converter-api.version>
+        <smallrye.reactive-messaging.version>4.4.0</smallrye.reactive-messaging.version>
         <smallrye.reactive-streams-operators.version>1.0.13</smallrye.reactive-streams-operators.version>
-        <smallrye.mutiny.reactive-streams-operators.version>1.9.0</smallrye.mutiny.reactive-streams-operators.version>
-        <smallrye.mutiny.vertx.version>2.30.1</smallrye.mutiny.vertx.version>
+        <smallrye.mutiny.reactive-streams-operators.version>2.1.0</smallrye.mutiny.reactive-streams-operators.version>
+        <smallrye.mutiny.vertx.version>3.2.0</smallrye.mutiny.vertx.version>
         <!-- quarkus is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
         <!-- tracer implementations -->
-        <io.opentelemetry.version>1.21.0</io.opentelemetry.version>
+        <io.opentelemetry.version>1.23.1</io.opentelemetry.version>
         <io.opentracing.version>0.33.0</io.opentracing.version>
         <io.opentracing.contrib-jaxrs.version>1.0.0</io.opentracing.contrib-jaxrs.version>
         <io.jaegertracing.version>1.8.1</io.jaegertracing.version>
 
         <!-- Artifact versions provided by Quarkus x.y -->
-        <resteasy.version>4.7.7.Final</resteasy.version>
+        <resteasy.version>6.2.1.Final</resteasy.version>
         <apache.httpclient.version>4.5.14</apache.httpclient.version>
-        <!-- quarkus is excluding jakarta.json-api in favor of the transitive dependency of yasson (see maven3_repo\org\eclipse\yasson\x.x\*.pom) -->
-        <jakarta.json.version>1.1.6</jakarta.json.version>
-        <glassfish.jakarta.json.version>1.1.6</glassfish.jakarta.json.version>
-        <jakarta.json.bind.version>1.0.2</jakarta.json.bind.version>
-        <yasson.version>1.0.11</yasson.version>
+        <jakarta.json.version>2.1.1</jakarta.json.version>
+        <jakarta.json.bind.version>3.0.0</jakarta.json.bind.version>
+        <parsson.version>1.1.1</parsson.version>
+        <yasson.version>3.0.2</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
         <jackson-2-version>2.14.2</jackson-2-version>
         <jackson-bom.version>2.14.2</jackson-bom.version>
 
-        <infinispan.version>14.0.6.Final</infinispan.version>
-        <hibernate.version>5.6.15.Final</hibernate.version>
+        <infinispan.version>14.0.7.Final</infinispan.version>
+        <hibernate.version>6.2.0.Final</hibernate.version>
 
-        <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
-        <jakarta.validation.version>2.0.2</jakarta.validation.version>
-        <hibernate.validator.version>6.2.5.Final</hibernate.validator.version>
+        <!-- Hibernate 7.0.0.Alpha5 is a compatible implementation for Bean Validation 3.0 (EE9/EE10) -->
+        <jakarta.validation.version>3.0.2</jakarta.validation.version>
+        <hibernate.validator.version>8.0.0.Final</hibernate.validator.version>
         <!-- ojdbc version in the quarkus-jdbc-oracle extension -->
         <oracle.ojdbc.version>21.5.0.0</oracle.ojdbc.version>
         <!-- kafka version in the kafka extensions -->
-        <kafka.version>3.3.2</kafka.version>
+        <kafka.version>3.4.0</kafka.version>
 
-        <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 2.0) -->
-        <jakarta.inject.version>1.0</jakarta.inject.version>
+        <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 4.0) -->
+        <jakarta.inject.version>2.0.1</jakarta.inject.version>
 
         <!-- Logging API supported by Quarkus (logback for testing must be compatible with slf4j) -->
-        <slf4j.version>1.7.36</slf4j.version>
-        <logback.version>1.2.12</logback.version>
+        <slf4j.version>2.0.6</slf4j.version>
 
-        <asm.version>9.4</asm.version>
+        <asm.version>9.5</asm.version>
         <byte-buddy.version>1.12.18</byte-buddy.version>
 
         <!-- it seems that the quarkus testing integration works best using the junit mentioned in the quarkus BOM -->
@@ -540,11 +531,6 @@
                     <version>${jakarta.json.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>org.glassfish</groupId>
-                    <artifactId>jakarta.json</artifactId>
-                    <version>${glassfish.jakarta.json.version}</version>
-                </dependency>
-                <dependency>
                     <groupId>jakarta.json.bind</groupId>
                     <artifactId>jakarta.json.bind-api</artifactId>
                     <version>${jakarta.json.bind.version}</version>
@@ -613,7 +599,7 @@
                     </exclusions>
                 </dependency>
                 <dependency>
-                    <groupId>org.hibernate</groupId>
+                    <groupId>org.hibernate.orm</groupId>
                     <artifactId>hibernate-core</artifactId>
                     <version>${hibernate.version}</version>
                     <exclusions>
@@ -646,11 +632,13 @@
                         </exclusion>
                     </exclusions>
                 </dependency>
+<!--
                 <dependency>
                     <groupId>com.sun.activation</groupId>
                     <artifactId>jakarta.activation</artifactId>
                     <version>${jakarta.activation.version}</version>
                 </dependency>
+-->
                 <dependency>
                     <groupId>jakarta.inject</groupId>
                     <artifactId>jakarta.inject-api</artifactId>
