--- a/wildfly-29/pom.xml
+++ b/wildfly-29/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>wildfly-28</artifactId>
+    <artifactId>wildfly-29</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
@@ -16,12 +16,12 @@
         <!-- latest EE10 spec -->
         <jakarta.jakartaee-api.version>10.0.0</jakarta.jakartaee-api.version>
 
-        <!-- latest Wildfly 28 dependencies -->
+        <!-- latest Wildfly 29 dependencies -->
         <!-- see https://github.com/wildfly/boms/releases -->
-        <wildfly.bom.version>28.0.1.Final</wildfly.bom.version>
+        <wildfly.bom.version>29.0.0.Final</wildfly.bom.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
-        <jakarta.activation.version>2.1.1.jbossorg-1</jakarta.activation.version>
+        <jakarta.activation.version>2.1.2</jakarta.activation.version>
         <jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
         <jakarta.xml.soap-api.version>3.0.0</jakarta.xml.soap-api.version>
         <jakarta.xml.ws-api.version>4.0.0</jakarta.xml.ws-api.version>
@@ -34,8 +34,8 @@
         <version.org.jboss.spec.jakarta.el>4.0.1.Final</version.org.jboss.spec.jakarta.el>
         <jakarta.el.version>5.0.0-M1</jakarta.el.version>
 
-        <!-- MicroProfile Standard Versions provided by Wildfly 28 -->
-        <!-- see also https://mvnrepository.com/artifact/org.wildfly.bom/wildfly-microprofile/28.x.x.Final -->
+        <!-- MicroProfile Standard Versions provided by Wildfly 29 -->
+        <!-- see also https://mvnrepository.com/artifact/org.wildfly.bom/wildfly-microprofile/29.x.x.Final -->
         <mp.config.version>3.0.2</mp.config.version>
         <mp.fault-tolerance.version>4.0.2</mp.fault-tolerance.version>
         <mp.health.version>4.0</mp.health.version>
@@ -47,30 +47,30 @@
         <mp.reactive-messaging.version>3.0</mp.reactive-messaging.version>
         <mp.reactive-streams-operators.version>3.0</mp.reactive-streams-operators.version>
         <mp.rest-client.version>3.0</mp.rest-client.version>
-        <smallrye.common.version>2.0.0</smallrye.common.version>
-        <smallrye.config.version>3.1.3</smallrye.config.version>
-        <smallrye.fault-tolerance.version>6.2.2</smallrye.fault-tolerance.version>
-        <smallrye.health.version>4.0.0</smallrye.health.version>
+        <smallrye.common.version>2.1.0</smallrye.common.version>
+        <smallrye.config.version>3.3.0</smallrye.config.version>
+        <smallrye.fault-tolerance.version>6.2.4</smallrye.fault-tolerance.version>
+        <smallrye.health.version>4.0.2</smallrye.health.version>
         <smallrye.jwt.version>4.2.0</smallrye.jwt.version>
-        <smallrye.openapi.version>3.3.2</smallrye.openapi.version>
+        <smallrye.openapi.version>3.4.0</smallrye.openapi.version>
         <smallrye.opentelemetry.version>2.3.2</smallrye.opentelemetry.version>
         <smallrye.reactive-converter-api.version>2.6.0</smallrye.reactive-converter-api.version>
-        <smallrye.reactive-messaging.version>4.3.0</smallrye.reactive-messaging.version>
+        <smallrye.reactive-messaging.version>4.8.0</smallrye.reactive-messaging.version>
         <smallrye.mutiny.reactive-streams-operators.version>2.1.0</smallrye.mutiny.reactive-streams-operators.version>
-        <smallrye.mutiny.vertx.version>3.0.0</smallrye.mutiny.vertx.version>
-        <!-- Wildfly 28 is using resteasy-client-microprofile instead of smallrye-rest-client -->
+        <smallrye.mutiny.vertx.version>3.3.0</smallrye.mutiny.vertx.version>
+        <!-- Wildfly 29 is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
         <!-- tracer implementations -->
         <io.opentelemetry.version>1.20.0</io.opentelemetry.version>
 
-        <!-- Artifact versions provided by Wildfly 28.x.x.Final -->
-        <!-- (see wildfly-28.x.x.Final/modules/system/layers/base and Wildfly BOM) -->
+        <!-- Artifact versions provided by Wildfly 29.x.x.Final -->
+        <!-- (see wildfly-29.x.x.Final/modules/system/layers/base and Wildfly BOM) -->
         <resteasy.version>6.2.4.Final</resteasy.version>
         <apache.httpclient.version>4.5.14</apache.httpclient.version>
         <!-- note that wildfly provides jakarta.json* in the path modules/system/layers/base/javax/json/* -->
-        <jakarta.json.version>2.1.1</jakarta.json.version>
+        <jakarta.json.version>2.1.2</jakarta.json.version>
         <jakarta.json.bind.version>3.0.0</jakarta.json.bind.version>
-        <parsson.version>1.1.1</parsson.version>
+        <parsson.version>1.1.3</parsson.version>
         <yasson.version>3.0.1</yasson.version>
 
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
@@ -78,17 +78,17 @@
         <jackson-bom.version>2.14.2</jackson-bom.version>
 
         <!-- note that infinispan-directory-provider uses an older version -->
-        <infinispan.version>14.0.8.Final</infinispan.version>
-        <hibernate.version>6.2.1.Final</hibernate.version>
+        <infinispan.version>14.0.12.Final</infinispan.version>
+        <hibernate.version>6.2.6.Final</hibernate.version>
 
-        <!-- Wildfly 28.x.x.Final uses Hibernate Validator 8.0.xx.Final -->
+        <!-- Wildfly 29.x.x.Final uses Hibernate Validator 8.0.xx.Final -->
         <jakarta.validation.version>3.0.2</jakarta.validation.version>
         <hibernate.validator.version>8.0.0.Final</hibernate.validator.version>
 
-        <!-- Wildfly 28.x.x.Final uses Weld 5.1.x (corresponding to CDI 4.0) -->
+        <!-- Wildfly 29.x.x.Final uses Weld 5.1.x (corresponding to CDI 4.0) -->
         <jakarta.inject.version>2.0.1</jakarta.inject.version>
         <!-- TODO use org.jboss.weld:weld-core-bom -->
-        <weld.version>5.1.0.Final</weld.version>
+        <weld.version>5.1.1.Final</weld.version>
 
         <!-- Logging API supported by Wildfly -->
         <slf4j.version>2.0.7</slf4j.version>
@@ -221,7 +221,7 @@
                     <exclusions>
                         <exclusion>
                             <!-- avoid Dependency convergence error (smallrye-health -->
-                            <!-- has only smallrye-config 3.0.0, wildfly already 3.1.3) -->
+                            <!-- has only smallrye-config 3.2.1, wildfly already 3.3.0) -->
                             <groupId>io.smallrye.config</groupId>
                             <artifactId>smallrye-config</artifactId>
                         </exclusion>
@@ -347,13 +347,6 @@
                     <groupId>org.hibernate.orm</groupId>
                     <artifactId>hibernate-core</artifactId>
                     <version>${hibernate.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- wildfly uses jakarta.activation-api 2.1.1.jbossorg-1 instead of just 2.1.1 -->
-                            <groupId>jakarta.activation</groupId>
-                            <artifactId>jakarta.activation-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.hibernate.validator</groupId>
@@ -402,13 +395,6 @@
                     <groupId>jakarta.xml.bind</groupId>
                     <artifactId>jakarta.xml.bind-api</artifactId>
                     <version>${jakarta.xml.bind-api.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- wildfly uses jakarta.activation-api 2.1.1.jbossorg-1 instead of just 2.1.1 -->
-                            <groupId>jakarta.activation</groupId>
-                            <artifactId>jakarta.activation-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>jakarta.xml.ws</groupId>
@@ -419,13 +405,6 @@
                     <groupId>jakarta.xml.soap</groupId>
                     <artifactId>jakarta.xml.soap-api</artifactId>
                     <version>${jakarta.xml.soap-api.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <!-- wildfly uses jakarta.activation-api 2.1.1.jbossorg-1 instead of just 2.1.1 -->
-                            <groupId>jakarta.activation</groupId>
-                            <artifactId>jakarta.activation-api</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>jakarta.annotation</groupId>
@@ -440,22 +419,4 @@
             </dependencies>
         </profile>
     </profiles>
-
-    <repositories>
-        <repository>
-            <!-- this is needed for many "x-jbossorg-n" versions of jakarta.* artifacts -->
-            <id>jboss-releases</id>
-            <name>JBoss Releases Repository</name>
-            <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
-            <layout>default</layout>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
 </project>
